vayu: init: Set lmkd.reinit property on boot-completed state
Set lmkd.reinit property to 1. This will trigger
reinit of lmkd service after boot complete.

CRs-Fixed: 2692843

Change-Id: Ib946b01ca1dc013f0148ca702e4d550cde32b6c2
Signed-off-by: Nauval Rizky <enuma.alrizky@gmail.com>

--- a/rootdir/etc/init.vayu.rc
+++ b/rootdir/etc/init.vayu.rc
@@ -32,3 +32,6 @@ on property:sys.boot_completed=1
     # Enable ZRAM on boot_complete
     write /proc/sys/vm/swappiness 100
     write /sys/block/zram0/disksize 2147483648
+
+    # Reinit lmkd to reconfigure lmkd properties
+    setprop lmkd.reinit 1
