--- a/rootdir/etc/init.vayu.rc
+++ b/rootdir/etc/init.vayu.rc
@@ -27,3 +27,7 @@ on property:sys.boot_completed=1
     # Allow system to adjust haptic level directly
     chown system system /sys/module/qti_haptics/parameters/level
     chmod 0664 /sys/module/qti_haptics/parameters/level
+
+    # Allow system to read measured_fps
+    chown system graphics /sys/class/drm/sde-crtc-0/measured_fps
+    chmod 0444 /sys/class/drm/sde-crtc-0/measured_fps
