--- a/rootdir/etc/init.vayu.rc
+++ b/rootdir/etc/init.vayu.rc
@@ -19,11 +19,7 @@ on property:vendor.post_boot.parsed=1
     write /sys/block/zram0/max_comp_streams 8
     write /proc/sys/vm/page-cluster 0
 
-on property:sys.boot_completed=1
-    # Enable ZRAM on boot_complete
-    write /proc/sys/vm/swappiness 100
-    write /sys/block/zram0/disksize 2147483648
-
+on post-fs-data
     # Allow system to adjust haptic level directly
     chown system system /sys/module/qti_haptics/parameters/level
     chmod 0664 /sys/module/qti_haptics/parameters/level
@@ -31,3 +27,8 @@ on property:sys.boot_completed=1
     # Allow system to read measured_fps
     chown system graphics /sys/class/drm/sde-crtc-0/measured_fps
     chmod 0444 /sys/class/drm/sde-crtc-0/measured_fps
+
+on property:sys.boot_completed=1
+    # Enable ZRAM on boot_complete
+    write /proc/sys/vm/swappiness 100
+    write /sys/block/zram0/disksize 2147483648
