--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -44,6 +44,10 @@
         </receiver>
 
         <activity
+            android:name=".support.SupportPageActivity"
+            android:exported="true" />
+
+        <activity
             android:name=".dirac.DiracActivity"
             android:label="@string/dirac_title"
             android:theme="@style/Theme.Main">
@@ -83,7 +87,7 @@
         </activity>
 
         <activity
-            android:name=".speaker.ClearSpeakerActivity" 
+            android:name=".speaker.ClearSpeakerActivity"
             android:label="@string/clear_speaker_title"
             android:theme="@style/Theme.Main">
             <intent-filter>
