--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -56,6 +56,8 @@
             </intent-filter>
             <meta-data android:name="com.android.settings.category"
                        android:value="com.android.settings.category.ia.sound" />
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/dirac_summary" />
         </activity>
 
         <activity
@@ -113,6 +115,8 @@
             </intent-filter>
             <meta-data android:name="com.android.settings.category"
                        android:value="com.android.settings.category.ia.sound" />
+            <meta-data android:name="com.android.settings.summary"
+                       android:resource="@string/clear_speaker_summary" />
         </activity>
 
         <service
